<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recipe"
            type="com.mg.recipe.spoonacular.data.models.Result" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardBackgroundColor"
        app:layoutDescription="@xml/fragment_recipe_overview">

        <ImageView
            android:id="@+id/main_imageView"
            loadImageFromUrl="@{recipe.image}"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
            app:layout_constraintEnd_toEndOf="@+id/main_imageView"
            app:layout_constraintStart_toStartOf="@+id/main_imageView"
            app:layout_constraintTop_toTopOf="@+id/main_imageView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/time_textView"
            setNumberOfMinutes="@{recipe.readyInMinutes}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
            app:layout_constraintEnd_toEndOf="@+id/gradient_overlay"
            tools:text="100" />

        <ImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toTopOf="@+id/time_textView"
            app:layout_constraintEnd_toEndOf="@+id/time_textView"
            app:layout_constraintStart_toStartOf="@+id/time_textView"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/likes_textView"
            setNumberOfLikes="@{recipe.aggregateLikes}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/time_textView"
            app:layout_constraintEnd_toStartOf="@+id/time_textView"
            tools:text="100" />

        <ImageView
            android:id="@+id/likes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toTopOf="@+id/likes_textView"
            app:layout_constraintEnd_toEndOf="@+id/likes_textView"
            app:layout_constraintStart_toStartOf="@+id/likes_textView"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:text="@{recipe.title}"
            android:textColor="@color/darkGray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

        <ImageView
            android:id="@+id/vegetarian_imageView"
            applyGreenColorOnView="@{recipe.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/title_textView"
            app:layout_constraintTop_toBottomOf="@+id/title_textView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/vegetarian_textView"
            applyGreenColorOnView="@{recipe.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegetarian"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

        <ImageView
            android:id="@+id/vegan_imageView"
            applyGreenColorOnView="@{recipe.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/vegan_textView"
            applyGreenColorOnView="@{recipe.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegan"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

        <ImageView
            android:id="@+id/gluten_free_imageView"
            applyGreenColorOnView="@{recipe.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/gluten_free_textView"
            applyGreenColorOnView="@{recipe.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gluten_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

        <ImageView
            android:id="@+id/dairy_free_imageView"
            applyGreenColorOnView="@{recipe.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/dairy_free_textView"
            applyGreenColorOnView="@{recipe.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dairy_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/dairy_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/dairy_free_imageView" />

        <ImageView
            android:id="@+id/healthy_imageView"
            applyGreenColorOnView="@{recipe.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/healthy_textView"
            applyGreenColorOnView="@{recipe.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/healthy"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
            app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
            app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

        <ImageView
            android:id="@+id/cheap_imageView"
            applyGreenColorOnView="@{recipe.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_checkmark"
            app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
            app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
            app:tint="@color/darkGray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/cheap_textView"
            applyGreenColorOnView="@{recipe.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cheap"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
            app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
            app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegan_imageView">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/summary_textView"
                    parseHtml="@{recipe.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="TextView" />
            </FrameLayout>
        </ScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>